--- a/src/app/inside/inside.component.html
+++ b/src/app/inside/inside.component.html
@@ -1,4 +1,25 @@
 <svg xml:space="preserve" xmlns:xlink="http://www.w3.org/1999/xlink" id="Inner-SVG" style="enable-background:new 0 0 1191.9 568.8;" version="1.1" viewBox="0 0 1191.9 568.8" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
+  <defs>
+      <style _ngcontent-c6="" type="text/css">
+      .i-st0{fill: rgb(254, 221, 61);}
+      .i-st1{fill:#FFFFFF;}
+      .i-st2{fill:none;stroke:#6E6E6E;stroke-width:2.5;stroke-linejoin:round;stroke-miterlimit:10;}
+      .i-st3{fill:#6E6E6E;}
+      .i-st4{fill:none;stroke:#6E6E6E;stroke-width:1.2;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:2;}
+      .i-st5{fill:#FFFF00;stroke:#6E6E6E;stroke-width:2.5;stroke-linejoin:round;stroke-miterlimit:10;}
+
+      .i-st7{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
+      .i-st8{fill:none;stroke:#000000;stroke-miterlimit:10;stroke-dasharray:2.9955,2.9955;}
+      .i-st9{fill:none;stroke:#000000;stroke-miterlimit:10;stroke-dasharray:2.5556,2.5556;}
+      .i-st10{fill:none;stroke:#000000;stroke-width:3;stroke-miterlimit:10;stroke-dasharray:6;}
+
+      .i-st11{fill:#FFFF33;stroke:#000000;stroke-miterlimit:10;}
+
+      /*.i-st6{fill:none;stroke:#000000;stroke-miterlimit:10;}
+        .i-st12{fill:none;stroke:#000000;stroke-miterlimit:10;stroke-dasharray:3;}*/
+      .i-st13, .i-st6, .i-st12{fill:none;}
+    </style>
+  </defs>
   <g>
   <path class="i-st0 jacket-rib-1" d="M24.6,361.3l-23-44.4c-0.7-1.3-0.2-3,1-3.8l29-17.8c2.6-1.7,4.5-4.2,5.6-7.1l3.9-13.2l39.9,77&#10;&#9;&#9;l-14.5-2.9c-2.5-0.3-5,0-7.4,0.9l-30.8,12.7C26.9,363.2,25.3,362.6,24.6,361.3z" id="XMLID_34_"/><polygon class="i-st1 jacket-rib-2" id="XMLID_31_" points="15.2,305.4 20.4,302.2 47.6,354.7 41.9,357 &#9;"/>
   <path class="i-st1 jacket-sleeves" d="M221.7,168.7c50.4-20.1,226.6-61.1,280.9-37.4c0,0-8.4,56.9-124.9,103.8l-30.7,11.7l0,0&#10;&#9;&#9;c0,0-29.1,7-43.6,9.3c-14.6,2.3-25.5,1.4-35.9,6.1c-10.4,4.6-10.3-1-22.4,4.5C232.9,272.1,80.9,352,80.9,352l-39.9-77&#10;&#9;&#9;C41.1,275,171.3,188.8,221.7,168.7z" id="XMLID_28_"/>
